--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,55 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+
+
+.btn_bg {
+  background-color: #00F7AE;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
-  }
+.user-details {
+  background-color: #00F7AE;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.head_text {
+  font-family: "Ubuntu", sans-serif;
+  font-style: normal;
 }
 
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
-  }
+.download {
+  background-color: #F5FFFC;
+}
+
+.btn-bg {
+  background-color: #00F7AE;
+}
+
+.browser {
+  background-color: #F5FFFC;
+}
+
+.dash_bg {
+  background-color: #F5FFFC;
+}
+
+.overimg {
+  margin-top: -80px;
+}
+
+.user_category {
+  background-color: #00F7AE;
+  height: 500px;
+}
+
+.trac_box {
+  background-color: #00F7AE;
+}
+
+.tab-auto {
+  overflow-x: hidden;
 }
